<resources>
    <string name="app_name">MultitouchApp</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="clear">Clear</string>
    <string name="gestures">Touch to Draw</string>
</resources>
