<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="multitouch.multitouchapp.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Gesture Discoverability area -->
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gesture discoverabilty area" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="Open"
                        android:text="Open" />

                    <ImageButton
                        android:id="@+id/buttonNew"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignEnd="@+id/buttonDraw"
                        android:layout_alignParentTop="true"
                        android:layout_alignRight="@+id/buttonDraw"
                        android:layout_marginTop="11dp"
                        android:contentDescription="@string/start_new"
                        android:onClick="New"
                        android:src="@drawable/new_pic" />

                    <ImageButton
                        android:id="@+id/buttonSave"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignLeft="@+id/buttonNew"
                        android:layout_alignStart="@+id/buttonNew"
                        android:layout_below="@+id/buttonErase"
                        android:contentDescription="@string/save"
                        android:src="@drawable/save" />

                    <ImageButton
                        android:id="@+id/buttonErase"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignBottom="@+id/buttonDraw"
                        android:layout_toEndOf="@+id/buttonDraw"
                        android:layout_toRightOf="@+id/buttonDraw"
                        android:contentDescription="@string/erase"
                        android:src="@drawable/eraser" />

                    <ImageButton
                        android:id="@+id/buttonDraw"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/buttonNew"
                        android:contentDescription="@string/brush"
                        android:src="@drawable/brush" />

                    <Button
                        android:id="@+id/buttonClear"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:layout_gravity="bottom|center"
                        android:layout_weight="1"
                        android:onClick="clearCanvas"
                        android:text="Clear" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <!--Top Row -->
                    <LinearLayout
                        android:id="@+id/paintColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageButton
                            android:layout_width="@dimen/large_brush"
                            android:layout_height="@dimen/large_brush"
                            android:layout_margin="2dp"
                            android:background="#FF660000"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#FF660000" />

                        <ImageButton
                            android:layout_width="@dimen/large_brush"
                            android:layout_height="@dimen/large_brush"
                            android:layout_margin="2dp"
                            android:background="#FFFF0000"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#FFFF0000" />

                        <ImageButton
                            android:layout_width="@dimen/large_brush"
                            android:layout_height="@dimen/large_brush"
                            android:layout_margin="2dp"
                            android:background="#FFFF6600"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#FFFF6600" />

                        <ImageButton
                            android:layout_width="@dimen/large_brush"
                            android:layout_height="@dimen/large_brush"
                            android:layout_margin="2dp"
                            android:background="#FFFFCC00"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#FFFFCC00" />

                        <ImageButton
                            android:layout_width="@dimen/large_brush"
                            android:layout_height="@dimen/large_brush"
                            android:layout_margin="2dp"
                            android:background="#FF009900"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#FF009900" />

                        <ImageButton
                            android:layout_width="@dimen/large_brush"
                            android:layout_height="@dimen/large_brush"
                            android:layout_margin="2dp"
                            android:background="#FF009999"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#FF009999" />
                    </LinearLayout>
                    <!--Bottom Row -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageButton
                            android:layout_width="@dimen/large_brush"
                            android:layout_height="@dimen/large_brush"
                            android:layout_margin="2dp"
                            android:background="#FF0000FF"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#FF0000FF" />

                        <ImageButton
                            android:layout_width="@dimen/large_brush"
                            android:layout_height="@dimen/large_brush"
                            android:layout_margin="2dp"
                            android:background="#FF990099"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#FF990099" />

                        <ImageButton
                            android:layout_width="@dimen/large_brush"
                            android:layout_height="@dimen/large_brush"
                            android:layout_margin="2dp"
                            android:background="#FFFF6666"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#FFFF6666" />

                        <ImageButton
                            android:layout_width="@dimen/large_brush"
                            android:layout_height="@dimen/large_brush"
                            android:layout_margin="2dp"
                            android:background="#FFFFFFFF"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#FFFFFFFF" />

                        <ImageButton
                            android:layout_width="@dimen/large_brush"
                            android:layout_height="@dimen/large_brush"
                            android:layout_margin="2dp"
                            android:background="#FF787878"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#FF787878" />

                        <ImageButton
                            android:layout_width="@dimen/large_brush"
                            android:layout_height="@dimen/large_brush"
                            android:layout_margin="2dp"
                            android:background="#FF000000"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#FF000000" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <multitouch.multitouchapp.CanvasView
                android:id="@+id/mainCanvas"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
